--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1>THIS IS THE BEGINING OF MY BEST LIFE</h1>
-<H3>I am working on myself</H3>
+<h1>THIS IS THE BEGINNING OF MY BEST LIFE</h1>
+<H2>I am working on myself</H2>
+<h3>I will overcome every adverseries that come my way. I will stand strong and tall in Jesus name, Amen. </h3>
+I am the lord's delight, therefore I will prosper in all I do, Amen.
